Fixed colors on action tabs to make them more visible

--- a/public_records_portal/static/css/case.css
+++ b/public_records_portal/static/css/case.css
@@ -152,3 +152,19 @@
 a {
     color: #333333;
 }
+
+.nav-pills>li>a {
+    background-color: #0a5796;
+    color: #FFFFFF;
+}
+
+
+.nav-pills>li>a:hover {
+    background-color: #0A5999;
+    color: #FFFFFF;
+}
+
+.nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
+    background-color: #0B60B1;
+    color: #FFFFFF;
+}
